FIXED: When playing back a recording, Alt+Tabbing back to SDLPoP stops the replay if Alt is released before Tab.

2018 March 24
=================
(version 1.18.1)

FIXED: Fixed the bug with the level 3 checkpoint.
FIXED: Fixed the bug in "Fix hang on teleport bug".
FIXED: Fixed the removed loose floor on level 3.

2019 March 31
=================
(version 1.19)

FIXED: Fix looping "sword moving" sound if the player leaves a room exactly when a guard attacks.
FIXED: Support 8-bpp images in DAT files. For example the Pyramid mod contains some of these.
FIXED: Improved map-making on levels with broken room links: If a room is mapped to an already used place, then put it to the bottom of the map.
DONE: Load custom options from DOS PRINCE.EXE files.
DONE: Added a hotkey to display SDL versions. (Ctrl-C)
FIXED: Better support for high-DPI (Retina) displays.
FIXED: Disable integer scaling menu item if SDL version is too old.
DONE: Save screenshots and maps into a separate folder and add numbers to the filenames.
FIXED: Made the exit door fix configurable.
DONE: Added support for PC speaker sounds. Use command-line parameter "stdsnd".
DONE: Added support for colored torch flames.
FIXED: Torches appearing in the leftmost column are now animated. (They are actually in the rightmost column of the left-side room.)

(no release date yet)
=================
(upcoming version)

FIXED: Fixed crash on Linux when the prince fell out of the level while a guard was active.
FIXED: With start_in_blind_mode enabled, moving objects were not displayed until blind mode was toggled off+on.
FIXED: Fix upside-down screen when using PRINCE.EXE from v1.3 or v1.4.
FIXED: Tell Windows that SDLPoP is DPI aware to prevent unwanted stretching.
DONE: Added customization option for loose floor delay. (Used in Neon Persia.)
FIXED: Fix detection of "allow triggering any tile" hack.
DONE: Enable use_custom_options by default in the INI.